--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express-handlebars": "^5.2.0",
         "express-session": "^1.17.1",
         "mongoose": "^5.11.13",
+        "nodemailer": "^6.4.18",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
